Agrega documentación Swagger, endpoint DELETE y mejoras al TP
